--- a/src/style.css
+++ b/src/style.css
@@ -4,7 +4,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  overflow: hidden;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -13,7 +13,7 @@ body {
 
 #root {
   width: 100%;
-  height: 100vh;
+  height: 100%;
   display: flex;
   flex-direction: column;
   margin: auto;
@@ -24,7 +24,7 @@ body {
 .hero-section {
   position: relative;
   width: 100%;
-  height: 100vh;
+  height: calc(100vh - 5rem);
   display: flex;
   align-items: center;
   gap: 5rem;
@@ -53,7 +53,7 @@ body {
 
 .hero-section .hero-content p {
   font-size: 18px;
-  margin-bottom: 1rem;
+  margin-bottom: 1.5rem;
 }
 
 .hero-section button{
@@ -69,4 +69,64 @@ body {
   color: #FFF;
   font-size: 15px;
   font-weight: 500;
+}
+
+/* Our service section */
+
+.our-service{
+  width: 100%;
+  height: 100%;
+
+  display: flex;
+  flex-direction: column;
+  gap: 5rem;
+  justify-content: center;
+  align-items: center;
+  padding: 2rem 0rem;
+}
+
+.our-service .cards{
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 2rem;
+}
+
+.our-service .cards .card{
+  width: 300px;
+  border: 2px solid #0c87d1;
+  padding: 2rem;
+  border-radius: 12px;
+
+  display: flex;
+  flex-direction: column;
+  gap: .8rem;
+  align-items:start;
+}
+
+.our-service .cards .card .img{
+  display: grid;
+  place-items: center;
+  background-color: #6cb7e5;
+  border-radius: 50%;
+  width: 70px;
+  height: 70px;
+}
+
+.our-service .cards .card .img img{
+  width: 50%;
+}
+
+.our-service .cards .card button{
+  padding: .6rem .8rem;
+  background-color: #0c87d1;
+  border-radius: 4px;
+  border: none;
+}
+
+.our-service .cards .card button a{
+  text-decoration: none;
+  color: #fff;
 }
