--- a/src/style.css
+++ b/src/style.css
@@ -85,6 +85,10 @@ body {
   padding: 2rem 0rem;
 }
 
+.our-service h2{
+  font-size: 1.8rem;
+}
+
 .our-service .cards{
   width: 100%;
   display: flex;
@@ -129,4 +133,146 @@ body {
 .our-service .cards .card button a{
   text-decoration: none;
   color: #fff;
+}
+
+
+/* About Us Section */
+.about-us{
+  margin-top: 4rem;
+  width: 100%;
+  height: 80vh;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+
+  background-image: url('../assets/about-us.png');
+  background-repeat: no-repeat;
+  background-position: left;
+  background-size: 280px;
+  background-position-x: 100px;
+  background-position-y: 80px;
+}
+
+.about-us h2{
+  font-size: 1.8rem;
+}
+
+.about-us .about-us-content{
+  align-self: flex-end;
+  padding: 2rem;
+  width: 50%;
+
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: start;
+  gap: 1rem;
+}
+
+.about-us .about-us-content h2{
+  font-size: 2.8rem;
+  font-weight: 700;
+  line-height: 60px;
+}
+
+.about-us-content button{
+  padding: .8rem 1.8rem;
+  border-radius: 4px;
+  background-color: #0c87d1;
+  outline: none;
+  border: none;
+}
+
+.about-us-content button a {
+  text-decoration: none;
+  color: #FFF;
+  font-size: 15px;
+  font-weight: 500;
+}
+
+/* Stats Section */
+.stats{
+  margin-top: 5rem;
+  padding: 2rem 0rem;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.stats-container{
+  width: 80%;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  border-radius: 22px;
+
+  padding: 2rem;
+  background-color: #4eaae3;
+}
+
+.stats-card{
+  height: 150px;
+  width: 150px;
+  border: 4px solid #0467a4;
+  background-color: #fff;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  border-radius: 50%;
+}
+
+/* staff section */
+.staff-details{
+  margin-top: 4rem;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  /* background-color: #6cb7e5; */
+  border-radius: 12px;
+}
+
+.staff-details h2{
+  margin-top: 2rem;
+  font-size: 1.8rem;
+}
+
+.staff-details .staff-cards{
+  margin-top: 2rem;
+  padding: 1rem;
+  width: 80%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  gap: 4rem 5rem;
+}
+
+.staff-details .staff-cards .staff-card{
+  width: 250px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.staff-details .staff-cards .staff-card img{
+  width: 100%;
+  height: 250px;
+  object-fit: cover;
+  border-radius: 18px;
+}
+
+.staff-details .staff-cards .staff-card h3{
+  margin-top: .5rem;
+}
+
+.staff-details .staff-cards .staff-card p{
+  color: rgb(98, 98, 98);
+  font-size: 14px;
 }
